# rust-image-server

./: .gitignore  Cargo.toml  Dockerfile  Readme.md
examples/: json_request.txt  multipart_request.txt
opencv/: Cargo.toml  build.rs
opencv/c_files/: mat.cc  mat.h
opencv/src/: mat.rs
opencv/tests/: mat.rs
src/: lib.rs  main.rs
src/infrastructure/: mod.rs  utils.rs
src/infrastructure/service/: mod.rs  test.rs
src/web/: mod.rs
src/web/json_handler/: mod.rs  test.rs  utils.rs
src/web/multipart_handler/: mod.rs  test.rs
test_data/payloads/: one_file_json_payload  one_uri_json_payload  one_uri_two_file_json_payload  two_file_json_payload
