[package]
name = "image_pool"
version = "0.1.0"
authors = ["Derevtsov K <godzie@yandex.ru>"]
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

actix = "0.7"
actix-web = { version="^0.7", features=["ssl"] }

uuid = { version = "0.7", features = ["v4"] }
mime = "0.3.12"

failure = "0.1.5"
base64 = "0.9.0"

opencv = { path = "./opencv" }
